<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="7dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_first_no"
        android:layout_width="match_parent"
        android:hint="@string/enter_first_number"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:inputType="number">
    </EditText>

    <EditText
        android:id="@+id/et_second_no"
        android:layout_width="match_parent"
        android:hint="@string/enter_second_number"
        android:layout_margin="5dp"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_margin="1dp">
        </Button>

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:layout_margin="1dp">
        </Button>

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mul"
            android:layout_margin="1dp">
        </Button>

        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:layout_margin="1dp">
        </Button>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_gravity="center"
        android:layout_margin="15dp">

    </Button>


</LinearLayout>